structure of html landing page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="">LogIn</a>
                 <a href="">About</a>
             </div>
-            <div class="middle-content">
+            <div class="image-heading">
             <h1>This website is <br> awesome</h1>\
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <button>SignUp</button>
@@ -23,7 +23,26 @@
             </div>    
         </div>
       </header>
-      
-    
+      <div class="middle-content">
+            <h2>some random information</h2>
+            <img src="" alt="">
+            <p></p>
+            <img src="" alt="">
+            <p></p>
+            <img src="" alt="">
+            <p></p>
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+      </div>
+      <div>
+        <p></p>
+        <button>SignUp</button>
+      </div>
+      <footer>
+        <div>
+            copyright @ The doodle do do 2022
+        </div>
+      </footer>
 </body>
 </html>
