css faundamentals final flex box project landing page

--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
       <header>
-        <div class="whole-header">
+        <div class="logo">Header Logo</div>
            <div class="first-line">
-                <div class="logo"></div>
-                <a href="">SignUp</a>
-                <a href="">LogIn</a>
-                <a href="">About</a>
-            </div>
+               <a href="">SignUp</a>
+               <a href="">LogIn</a>
+               <a href="">About</a>
+           </div>
             <div class="image-heading">
-            <h1>This website is <br> awesome</h1>\
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <button>SignUp</button>
-            <img src="" alt="">
+              <p class="main-heading">website is <br> awesome</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <button>SignUp</button>
+              <img src="" alt="">
             </div>    
-        </div>
       </header>
       <div class="middle-content">
             <h2>some random information</h2>
