html of header os complete and footer is copy pasted

--- a/index.html
+++ b/index.html
@@ -8,40 +8,87 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <header>
-        <div class="logo">Header Logo</div>
-           <div class="first-line">
-               <a href="">SignUp</a>
+  <!-- header and nav -->
+      <header> 
+        <nav>
+        <div class="nav-logo">Header Logo</div>
+           <div class="nav-link">
+               <a href="" class="sign-button">SignUp</a>
                <a href="">LogIn</a>
-               <a href="">About</a>
+               <a href="" class="about-button">About</a>
            </div>
-            <div class="image-heading">
-              <p class="main-heading">website is <br> awesome</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-              <button>SignUp</button>
-              <img src="" alt="">
+        </nav>
+
+            <div class="header-secondary-div">
+              <div class="header-main-div">
+
+                <h1 class="header-main-heading">website is awesome</h1>
+                <p class="header-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum fugiat laudantium, quam voluptatum nihil quos ad placeat recusandae, voluptatem libero modi non maiores quibusdam eius neque illum veniam provident harum?
+                </p>
+              </div>
+              <button class="signup-btn">SignUp</button>
+              <div class="header-img">
+                <img
+                 src="C:\Users\mahar\OneDrive\Documents\GitHub\-Landing-age-\photos\pexels-fernando-dos-santos-campos-2510245.jpg"
+                 >
+              </div>
             </div>    
       </header>
-      <div class="middle-content">
-            <h2>some random information</h2>
-            <img src="" alt="">
-            <p></p>
-            <img src="" alt="">
-            <p></p>
-            <img src="" alt="">
-            <p></p>
-            <img src="" alt="">
-            <p></p>
-            <p></p>
-      </div>
-      <div>
-        <p></p>
-        <button>SignUp</button>
-      </div>
-      <footer>
-        <div>
-            copyright @ The doodle do do 2022
+        <!-- some random info -->
+        <div class="random-div">
+          <div class="info-header"><span>Some random information</span></div>
+          <div class="pictures">
+            <div class="illustration-img">
+              <img
+                src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3" />
+              <p>this is subtext under an illustration below image</p>
+            </div>
+            <div class="illustration-img">
+              <img
+                src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3" />
+              <p>this is subtext under an illustration below image</p>
+            </div>
+            <div class="illustration-img">
+              <img
+                src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3" />
+              <p>this is subtext under an illustration below image</p>
+            </div>
+            <div class="illustration-img">
+              <img
+                src="https://play-lh.googleusercontent.com/IeNJWoKYx1waOhfWF6TiuSiWBLfqLb18lmZYXSgsH1fvb8v1IYiZr5aYWe0Gxu-pVZX3" />
+              <p>this is subtext under an illustration below image</p>
+            </div>
+          </div>
         </div>
-      </footer>
+        <!-- Quote  -->
+        <div class="quote-background quote-div">
+          <div>
+            <p class="quote-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+              dolore tempora unde repellat nisi ullam dolorum eveniet aut nobis
+              perspiciatis vitae deleniti. Iste molestias ratione numquam debitis,
+              velit porro! Dolor.
+            </p>
+            <span>-Thor, God of Thunder</span>
+          </div>
+        </div>
+        <!-- signup button div -->
+        <div class="blue-div">
+          <div>
+            <div class="signup-div">
+              <strong>Call to action ! its time !</strong>
+              <p>Signup for out product by clicking that button</p>
+            </div>
+            <div>
+              <button class="signup-btn">Sign up</button>
+            </div>
+          </div>
+        </div>
+        <!-- footer -->
+        <footer class="dark-background">
+          <span class="hero-secondary"> Copy right @ The Odin Project 2021 </span>
+        </footer>
+        </body>
+
 </body>
 </html>
